fixed a few mobile display issues.  Still having trouble with background on mobile.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -108,8 +108,7 @@ hr {
 }
 
 footer {
-    background: #fff;
-    background: rgba(255,255,255,0.9);
+    
 }
 
 footer p {
